<resources>
    <string name="app_name">ClothesShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1116432168793815</string>
    <string name="fb_login_protocol_scheme">fb1116432168793815</string>
    <dimen name="bottom_navigation_icon_size" override="true">30dp</dimen>
    <dimen name="design_bottom_navigation_height" override="true">72dp</dimen>
    <string name="title_activity_cart">CartActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_cart_">Cart_Activity</string>
    <string name="title_cart">Cart</string>
    <string name="count_item_cart_1">You already have</string>
    <string name="count_item_cart_2">items in your cart</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="change_address">Change</string>
    <string name="total">Total:</string>
    <string name="cash">Cash</string>
    <string name="order_success">Order Success</string>
    <string name="confirm">Confirm</string>
    <string name="personal">Personal</string>
    <string name="transport_fee">Transport Fee</string>
    <string name="order">Order</string>
    <string name="totalPrice">Total price</string>
    <string name="product">product</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with">Or SignIn With</string>
    <string name="dont_have_account">Do not have an account?-</string>
    <string name="full_name">Full name</string>
    <string name="have_account">Already have an account?-</string>
    <string name="loading">Loading...</string>
    <string name="description">Description</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="bags">Bags</string>
    <string name="hats">Hats</string>
    <string name="sales">Sales</string>
    <string name="have_no_buy">You have not bought any products</string>
    <string name="top_selling">Top Selling</string>
    <string name="shopping_frenzy">Shopping Frenzy</string>
    <string name="supper_sale">Supper Sale</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone numbes</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="personal_info">PersonalI Info</string>
    <string name="bill_manager">Bill Manager</string>
    <string name="history">History</string>
    <string name="contact">Contact</string>
    <string name="logout">LogOut</string>
    <string name="bill_id">Bill ID</string>
    <string name="detail">Detail</string>
    <string name="date_buy">Date of purchase</string>
    <string name="check_logout">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="rating">Thanks for your rating</string>
    <string name="comment">Comment</string>
</resources>