<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        tools:context=".fragment.InfoFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="20dp"
            android:id="@+id/tvNameCus"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etNameCus"
            android:layout_below="@id/tvNameCus"
            android:layout_toRightOf="@id/tvNameCus"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20dp"
            android:id="@+id/tvGender"
            android:layout_below="@id/etNameCus"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/spin_gender"
            android:layout_below="@id/tvGender"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tvNameCus"
            android:layout_marginLeft="-30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20dp"
            android:id="@+id/tvTel"
            android:layout_below="@id/spin_gender"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etTelCus"
            android:layout_below="@id/tvTel"
            android:layout_toRightOf="@id/tvNameCus"
            android:layout_marginLeft="-30dp"
            android:inputType="textEmailSubject"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:id="@+id/tvEmailCus"
            android:layout_below="@id/etTelCus"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etEmailCus"
            android:layout_below="@id/tvEmailCus"
            android:layout_toRightOf="@id/tvNameCus"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20dp"
            android:id="@+id/tvAddressCus"
            android:layout_below="@id/etEmailCus"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etAddressCus"
            android:layout_below="@id/tvAddressCus"
            android:layout_toRightOf="@id/tvNameCus"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:backgroundTint="@color/red"
            android:layout_below="@+id/etAddressCus"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnUpdateInfo"/>

    </RelativeLayout>

</ScrollView>
