<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SignInActivity"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/relativeTopSignUp"
            android:background="@drawable/custom_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/segoeuil"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:id="@+id/tvUserNameSignUp"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/relativeTopSignUp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserNameSignUp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:id="@+id/etUserNameSignUp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/tvEmailSignUp"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/etUserNameSignUp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmailSignUp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:id="@+id/etEmailSignUp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/tvPasswordSignUp"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/etEmailSignUp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPasswordSignUp"
            android:layout_marginLeft="40dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/etPasswordSignUp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/etPasswordSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/top_color"
            android:text="@string/sign_up" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear1"
            android:orientation="horizontal"
            android:fontFamily="@font/segoeuil"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnSignUp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btnSignIn"
                android:text="@string/have_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/bottom_color"
                android:id="@+id/tvSignIn"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bottom_color"
            android:text="@string/forgot_password"
            android:layout_below="@id/linear1"
            android:layout_marginTop="20dp"
            android:id="@+id/tvForgotSignUp"/>



    </RelativeLayout>
</ScrollView>
