<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/back_ground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_id"
        android:fontFamily="@font/segoeuil"
        android:layout_margin="15dp"
        android:id="@+id/tvMaDonHang"
        android:textSize="17dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_buy"
        android:fontFamily="@font/segoeuil"
        android:layout_marginLeft="15dp"
        android:id="@+id/tvDate"
        android:textSize="15dp"
        android:layout_toRightOf="@id/tvMaDonHang"
        android:layout_margin="15dp"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tvMaDonHang"
        android:id="@+id/imageViewItem"/>



    <TextView
        android:id="@+id/tvClothes_Name_Bill"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuil"
        android:text="Product name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/imageViewItem"/>

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuil"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/tvClothes_Name_Bill"
        android:layout_marginLeft="15dp"
        android:text="X1"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvPriceItem"
        android:layout_width="100dp"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuil"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="Giá : 500.000"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewItem"
        android:text="@string/product"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="35dp"
        android:id="@+id/tvCountItem"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_below="@id/tvCountItem"
        android:fontFamily="@font/segoeuil"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/bottom_color"
            android:fontFamily="@font/segoeuil"
            android:text="@string/detail"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/DetailButton"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/segoeuil"
            android:id="@+id/tvShipPrice"
            android:text="@string/transport_fee"
            android:textColor="@color/black"
            android:layout_marginRight="10dp">


        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/tvTotal_Price"
            android:text="@string/totalPrice"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/segoeuil"
            android:layout_below="@id/tvShipPrice">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/back_ground"/>
    </RelativeLayout>


</RelativeLayout>