<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.UserFragment">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/nopath" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgAvatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:text="Nguyễn Duy Anh"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:text="04/11/2000"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative2"
        android:background="@drawable/custom_rl"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relative1">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imagePersonal"
            android:src="@drawable/ic_group_24px"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"
            android:text="@string/personal_info"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imagePersonal"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px"
            android:id="@+id/btnPersonal"
            android:background="#F3F1F1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative3"
        android:background="@drawable/custom_rl"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relative2">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_event_note_24px"
            android:id="@+id/imageBill"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"
            android:text="@string/bill_manager"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageBill"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px"
            android:id="@+id/btnBill"
            android:background="#F3F1F1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative4"
        android:background="@drawable/custom_rl"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relative3">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageHistory"
            android:src="@drawable/ic_import_contacts_24px"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"
            android:text="@string/history"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageHistory"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px"
            android:id="@+id/btnHistory"
            android:background="#F3F1F1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative5"
        android:background="@drawable/custom_rl"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relative4">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageContact"
            android:src="@drawable/ic_ring_volume_24px"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuil"
            android:textColor="@color/black"
            android:text="@string/contact"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageContact"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px"
            android:id="@+id/btnContact"
            android:background="#F3F1F1"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative5"
        android:layout_marginTop="9dp"
        android:background="@drawable/custom_rl">

        <ImageView
            android:id="@+id/imageLogout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_login_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageLogout"
            android:fontFamily="@font/segoeuil"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#F3F1F1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative5"
        android:layout_marginTop="9dp"
        android:background="@drawable/custom_rl">

        <ImageView
            android:id="@+id/imageLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_person_outline_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageLogin"
            android:fontFamily="@font/segoeuil"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ImageButton
            android:id="@+id/btnLogin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#F3F1F1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chevron_right_24px" />

    </RelativeLayout>

</RelativeLayout>