<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/relative1"
        android:background="@drawable/custom_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:fontFamily="@font/segoeuil"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/relative1"
        android:id="@+id/recyclerviewPay"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/recyclerviewPay"
        android:id="@+id/relative3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:id="@+id/tvCountProducts"
            android:fontFamily="@font/segoeuil"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="Tổng tiền (1 sản phẩm):"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="100,000VNĐ"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/tvTotalPrice"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative3"
        android:layout_above="@+id/relative2"
        android:id="@+id/relative4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"

            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                android:text="@string/transport_fee"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18dp"
                android:fontFamily="@font/segoeuil"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                android:layout_marginBottom="10dp"
                android:id="@+id/tvShipCost"
                android:text="50,000VND"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="150,000VND"
                android:id="@+id/tvTotalShip"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/relative2">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/relativePay"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="100000VNĐ"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tvFinal"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/custom_top"
            android:id="@+id/relativePay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/segoeuil"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>